Removed unneccesary things

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -165,7 +165,7 @@
               <mat-icon>person</mat-icon>
               Full Name
             </label>
-            <input [(ngModel)]="editForm.name" class="form-input" required>
+            <input type="text" [(ngModel)]="editForm.name" class="form-input" required>
           </div>
 
           <div class="form-group">
@@ -173,7 +173,7 @@
               <mat-icon>email</mat-icon>
               Contact Information
             </label>
-            <input [(ngModel)]="editForm.contact_info" class="form-input" required>
+            <input type="text" [(ngModel)]="editForm.contact_info" class="form-input" required>
           </div>
 
           <div class="form-group">
@@ -181,7 +181,7 @@
               <mat-icon>place</mat-icon>
               Location
             </label>
-            <input [(ngModel)]="editForm.location" class="form-input" required>
+            <input type="text" [(ngModel)]="editForm.location" class="form-input" required>
           </div>
 
           <div class="form-actions">
